--- a/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -721,4 +721,6 @@ mautic.segment.contact.filter.added="Filter added contacts"
 mautic.segment.stats="Contacts added in time"
 mautic.segment.form.confirmdelete="Delete the segment, %name%?"
 mautic.lead.segments.contacts="All contacts"
+mautic.lead.segments.contacts.added="Added"
+mautic.lead.segments.contacts.removed="Removed"
 mautic.channel.stat.leadcount.tooltip="Details may not match summary numbers if the contact no longer exists in Mautic or if a contact was sent the message multiple times"
