--- a/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -723,6 +723,7 @@ mautic.segment.form.confirmdelete="Delete the segment, %name%?"
 mautic.lead.segments.contacts="All contacts"
 mautic.lead.segments.contacts.added="Added"
 mautic.lead.segments.contacts.removed="Removed"
+mautic.lead.segments.contacts.total="Total"
 mautic.channel.stat.leadcount.tooltip="Details may not match summary numbers if the contact no longer exists in Mautic or if a contact was sent the message multiple times"
 mautic.lead.segments.usages="Segment usages"
 mautic.lead.campaign.share="Campaign share"
