--- a/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -718,7 +718,7 @@ mautic.lead.report.frequency.date_added="Frequency rule added date"
 mautic.segment.contact.manually.added="Manually added contacts"
 mautic.segment.contact.manually.removed="Manually removed contacts"
 mautic.segment.contact.filter.added="Filter added contacts"
-mautic.segment.stats="Contacts added in time"
+mautic.segment.stats="Contacts in time"
 mautic.segment.form.confirmdelete="Delete the segment, %name%?"
 mautic.lead.segments.contacts="All contacts"
 mautic.lead.segments.contacts.added="Added"
